@@ -1,0 +1,5 @@
+class Sys::Signal::Handler::SIG_DFL {
+  method new : Sys::Signal::Handler::SIG_DFL () {
+    return new Sys::Signal::Handler::SIG_DFL;
+  }
+}
