@@ -87,6 +87,9 @@
       SIG_DFL
       SIG_ERR
       SIG_IGN
+    * Added the Sys::Signal::Handler::SIG_DFL class.
+    * Added the Sys::Signal::Handler::SIG_IGN class.
+    * Added the Sys::Signal::Handler::SIG_ERR class.
       
   [Incompatible Changes]
     * The kill method in the Sys::Process class is moved to the Sys::Signal.
